--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mdb-react-ui-kit": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.12.0",
     "react-router-dom": "^6.13.0",
     "reactstrap": "^9.2.0",
     "require": "^2.4.20",
